image overflowing fixed responsive

--- a/TWP-ASS1/style.css
+++ b/TWP-ASS1/style.css
@@ -491,8 +491,7 @@ button:active {
 
 .transport-card {
   height: 30rem;
-  width: 18vw;
-
+  width: 25rem;
   background-position: center;
   background-blend-mode: multiply;
 
